--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,8 @@ code {
 .plus{width:35px;height:35px; background:rgba(0, 0, 0, 0.5) url(../public/image/add-line.png) no-repeat center; z-index:10;}
 .check{width:35px;height:35px; background:rgba(140, 211, 255, 0.5) url(../public/image/check-line.png) no-repeat center; z-index:10;}
 .delete{width:24px;height:24px; background:white url(../public/image/close-circle-fill.png) no-repeat center; z-index:10;}
+.menu{width:24px;height:24px; background:white url(../public/image/menu-line.png) no-repeat center; z-index:10;}
+.search{width:24px;height:24px; background:white url(../public/image/search-line.png) no-repeat center; z-index:10;}
 
 .tabs {
   display: flex;
