--- a/src/index.css
+++ b/src/index.css
@@ -249,3 +249,32 @@ td{
 .header-center {
   text-align: center;
 }
+
+.select-container {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0;
+}
+
+.day-select {
+  width: 150px;
+  padding: 10px;
+  border: 2px solid #FF9A9A;
+  border-radius: 5px;
+  font-size: 1rem;
+  color: #333;
+  background-color: #fff;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='38' viewBox='0 0 24 24' width='38' xmlns='http://www.w3.org/2000/svg'><path d='M0 0h24v24H0z' fill='none'/><path d='M7 10l5 5 5-5z'/></svg>");
+  background-repeat: no-repeat;
+  background-position-x: 100%;
+  background-position-y: 5px;
+  font-weight: bold;
+}
+
+.day-select:focus {
+  outline: none;
+  border-color: #FF6868;
+}
