--- a/src/index.css
+++ b/src/index.css
@@ -262,6 +262,7 @@ td{
 .no-scrollbar {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+}
   
 .select-container {
   display: flex;
