fix: calendar css 및 사진 css 수정

--- a/src/Calendar.css
+++ b/src/Calendar.css
@@ -96,7 +96,7 @@ abbr[title] {
     background: #6f48eb;
     color: white;
 }
-.react-calendar__tile--rangeEnd {
+.react-calendar__tile--rangeEnd:enabled:hover {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     border-top-right-radius: 6px;
